--- a/vod.yaml
+++ b/vod.yaml
@@ -273,6 +273,7 @@ payload:
  - mdghhsgc4iiy.com
  - m3u8.hmrvideo.com
  - hw8.live
+ - huawei8.live 
  - selfcdn.simaguo.com
  - m3u.nikanba.live
  - www.fuju2024.cc
@@ -287,7 +288,7 @@ payload:
  - bxgbnet.com
  - xxya88.com
  - zpsps.com
- -  bbffvip.com
+ - bbffvip.com
  - iqyi.xiaohuangrentv.com
  - +.jisu.com
  - pic.niuniuzy.info
