--- a/vod.yaml
+++ b/vod.yaml
@@ -43,6 +43,7 @@ payload:
   - www.zxzjhd.com
   - z.kzjtv.com
   - www.libvio.cc
+  - libvio.cloud
   - labipan.com
   - apiappdyyztvyydsqwdy.68.gy
   - puui.qpic.cn
