--- a/vod.yaml
+++ b/vod.yaml
@@ -1,4 +1,4 @@
-payload:
+fnpayload:
   - hutaoindex.com
   - dmbus.cc
   - dm84.tv
@@ -53,7 +53,6 @@ payload:
   - www.xn--sss604efuw.com
   - www.hkybqufgh.com
   - ok321.top
-  - live.fanmingming.com
   - api.so.360kan.com
   - duanjutt.tv
   - www.ghw9zwp5.com
