--- a/notcn.yaml
+++ b/notcn.yaml
@@ -15,3 +15,11 @@ payload:
   - 'xc8866.com'
   - 'onlyfans.com'
   - 'xinsanbanbao.com'
+  - '+.applecensorship.com'
+  - '+.freebrowser.org'
+  - '+.freewechat.com'
+  - '+.freeweibo.com'
+  - '+.freezhihu.org'
+  - '+.greatfire.org'
+  - '+.pao-pao.net'
+  - '+.wikiunblocked.org'
