--- a/notcn.yaml
+++ b/notcn.yaml
@@ -11,7 +11,7 @@ payload:
   - 'xc8866.cc'
   - 'xchina.co'
   - 'minghui.org'
-  - 'creaders.net'
+  - '+.creaders.net'
   - 'xc8866.com'
   - 'onlyfans.com'
   - 'xinsanbanbao.com'
